# ericspyqtparts

./: README.md  setup.cfg
src/epyqtsettings/: settings.py  settings_widgets.py
src/epyqtwidgets/: humble_combobox.py  indicator.py  ip4validator.py  mpl.py  slider.py
