[metadata]
name = ericspyqtparts
version = 0.0.1
author = Eric Poppenheimer
author_email = ecpoppenheimer@gmail.com
description = A collection of PyQt composite widgets and other stuff I have found repeatedly useful in the past.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

python_requires = >=3.7